--- a/DidacticalEnigma/DidacticalEnigma.csproj
+++ b/DidacticalEnigma/DidacticalEnigma.csproj
@@ -381,6 +381,11 @@
     <Analyzer Include="..\packages\WpfAnalyzers.2.1.7.1\analyzers\dotnet\cs\Gu.Roslyn.CodeFixExtensions.dll" />
     <Analyzer Include="..\packages\WpfAnalyzers.2.1.7.1\analyzers\dotnet\cs\WpfAnalyzers.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="dic\hiragana_katakana.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\NMeCab.0.06.4\build\NMeCab.targets" Condition="Exists('..\packages\NMeCab.0.06.4\build\NMeCab.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
