--- a/DidacticalEnigma/DidacticalEnigma.csproj
+++ b/DidacticalEnigma/DidacticalEnigma.csproj
@@ -203,6 +203,15 @@
     <Compile Include="Converters\BooleanToLoadingTextConverter.cs" />
     <Compile Include="Converters\SelectableDataSourceToStringConverter.cs" />
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Icons\CloseIcon.xaml.cs">
+      <DependentUpon>CloseIcon.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Icons\ColumnSplitIcon.xaml.cs">
+      <DependentUpon>ColumnSplitIcon.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Icons\RowSplitIcon.xaml.cs">
+      <DependentUpon>RowSplitIcon.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Utils\ClipboardHook.cs" />
     <Compile Include="Utils\ControlRenderCache.cs" />
     <Compile Include="ViewModels\CreationConverter.cs" />
@@ -253,6 +262,30 @@
     <Compile Include="ViewModels\VSplit.cs" />
     <Compile Include="ViewModels\WordVM.cs" />
     <Compile Include="Utils\VirtualizingTilePanel.cs" />
+    <Page Include="Icons\2Columns_16x.xaml">
+      <SubType>Designer</SubType>
+      <Generator>XamlIntelliSenseFileGenerator</Generator>
+    </Page>
+    <Page Include="Icons\2Rows_16x.xaml">
+      <SubType>Designer</SubType>
+      <Generator>XamlIntelliSenseFileGenerator</Generator>
+    </Page>
+    <Page Include="Icons\CloseIcon.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Icons\Close_16x.xaml">
+      <SubType>Designer</SubType>
+      <Generator>XamlIntelliSenseFileGenerator</Generator>
+    </Page>
+    <Page Include="Icons\ColumnSplitIcon.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Icons\RowSplitIcon.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\JapaneseTextPreview.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -333,6 +366,7 @@
     <Analyzer Include="..\packages\WpfAnalyzers.2.2.0.2\analyzers\dotnet\cs\Gu.Roslyn.Extensions.dll" />
     <Analyzer Include="..\packages\WpfAnalyzers.2.2.0.2\analyzers\dotnet\cs\WpfAnalyzers.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
