--- a/DidacticalEnigma.Core/DidacticalEnigma.Core.csproj
+++ b/DidacticalEnigma.Core/DidacticalEnigma.Core.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Optional" Version="4.0.0" />
     <PackageReference Include="System.Memory" Version="4.5.2" />
     <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     <PackageReference Include="UnicodeInformation" Version="2.3.0.26" />
   </ItemGroup>
 
