--- a/JDict.Tests/packages.config
+++ b/JDict.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AsyncEnumerator" version="2.2.2" targetFramework="net461" />
   <package id="Gu.Analyzers" version="1.3.2.0-dev" targetFramework="net461" developmentDependency="true" />
   <package id="Gu.Inject" version="0.1.0-dev" targetFramework="net461" />
   <package id="JetBrains.dotMemoryUnit" version="3.0.20171219.105559" targetFramework="net461" />
@@ -58,6 +59,7 @@
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
   <package id="UnicodeInformation" version="2.3.0.26" targetFramework="net461" />
