--- a/JDict/JDict.csproj
+++ b/JDict/JDict.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Optional" Version="4.0.0" />
     <PackageReference Include="System.Memory" Version="4.5.2" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
