--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Optional" Version="4.0.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
