--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 image: Visual Studio 2017
 configuration: Release
 before_build:
-- cmd: dotnet restore
+- cmd: dotnet restore DidacticalEnigma.sln
 build:
   project: DidacticalEnigma.sln
 install:
