--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,9 @@
 image: Visual Studio 2017
 configuration: Release
-before_build:
-- cmd: dotnet restore DidacticalEnigma.sln
 build:
   project: DidacticalEnigma.sln
 install:
   - cd %APPVEYOR_BUILD_FOLDER%
   - git submodule update --init --recursive
+  - nuget restore
+
